# ComfyUI-IF_MemoAvatar

./: IF_MemoAvatar.py  IF_MemoCheckpointLoader.py  README.md  __init__.py  memo_model_manager.py  pyproject.toml  requirements.txt  server.py
configs/: inference.yaml
example_workflows/: IF_MemoAvatar.json
memo/models/: attention.py  attention_processor.py  audio_proj.py  emotion_classifier.py  image_proj.py  motion_module.py  normalization.py  resnet.py  transformer_2d.py  transformer_3d.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d.py  unet_3d_blocks.py  wav2vec.py
memo/pipelines/: video_pipeline.py
memo/utils/: audio_utils.py  vision_utils.py
web/js/: IF_MemoAvatar.js
workflow/: IF_MemoAvatar.json  IF_MemoAvatar_IF_Extensions.json  IF_MemoAvatar_simple.json
