[project]
name = "comfyui_if_memoavatar"
description = "ComfyUI MemoAvatar is a talking head avatar generator using Memory-Guided Diffusion for Expressive Talking Video Generation"
version = "0.0.1"
license = { file = "LICENSE.txt" } 
dependencies = ["numba",
"librosa",
"diffusers>=0.31.0",
"transformers>=4.46.3",
"numpy>=1.26.4",
"PyYAML>=6.0.1",
"moviepy>=1.0.3",
"pillow>=10.4.0",
"librosa==0.10.2",
"audio-separator==0.24.1",
"funasr==1.0.27",
"moviepy==1.0.3",
"insightface==0.7.3",
"accelerate==1.1.1",
"albumentations==1.4.21",
"black==23.12.1",
"ffmpeg-python==0.2.0",
"huggingface-hub==0.26.2",
"imageio==2.36.0",
"imageio-ffmpeg==0.5.1",
"hydra-core==1.3.2",
"jax==0.4.35",
"mediapipe==0.10.18",
"modelscope==1.20.1",
"omegaconf==2.3.0",
"onnxruntime-gpu>=1.20.1",
"opencv-python-headless==4.10.0.84",
"scikit-learn>=1.5.2",
"scipy>=1.14.1",
"tqdm>=4.67.1"]


[project.urls]
Repository = "https://github.com/if-ai/ComfyUI-IF_MemoAvatar"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "impactframes"
DisplayName = "ComfyUI-IF_MemoAvatar"
Icon = ""